--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@
     --main-color: #7404c5;
     --text-color: #ffffff;
     --bg-color-01: #ff69b4;
-    --bg-color-02: #fff0f5;
+    --bg-color-02: #3c0946;
 }
 
 * {
